se agrega activity game (juego) ademas de nuevo activity_final_score para la visualizacion final
Signed-off-by: Jellian <haanniiaarodriguez@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">QuizAppPlus</string>
+    <string name="final_score">Puntuaciones Finales</string>
 </resources>
