--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">QuizAppPlus</string>
     <string name="final_score">Puntuaciones Finales</string>
+    <string name="play">play</string>
+    <string name="opciones">opciones</string>
 </resources>
