--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="final_score">Puntuaciones Finales</string>
     <string name="play">play</string>
     <string name="opciones">opciones</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 </resources>
