se agrega unicamente el portrait de Opciones
Signed-off-by: Jellian <haanniiaarodriguez@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="opciones">opciones</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="puntaje">Puntaje</string>
 </resources>
