se arregla bug de incio que volvio a aparecer
Signed-off-by: Jellian <haanniiaarodriguez@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="opciones">opciones</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
-    <string name="puntaje">Puntaje</string>
+    <string name="puntaje">Puntuaciones</string>
 
     <string name="question_text_1">"Pensamos demasiado y sentimos muy poco"</string>
     <string name="question_answer_1a">El Gran Dictador</string>
